2005-01-28  Mike Kestner  <mkestner@novell.com>

	* gtk/Dialog.custom : add a params array for button info to the ctor.
	* gtk/FileChooserDialog.custom : add a params array for button info to 
	both ctors.  Chain them to IntPtr.Zero.
	* gtk/Gtk.metadata : hide the ellipsis ctors for the dialog types.
	[Fixes #71818]
	* sample/GtkDemo/DemoDialog.cs : make the InteractiveDialog use the
	new Dialog ctor as it does in the c version.

2005-01-27  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeSelection.cs : use new GetSelectedRows() overload.
	* gtk/TreeSelection.custom : add a GetSelectedRows overload without the
	out model param. [Fixes #71814]

2005-01-27  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeView.cs : fix the value creation in the ctor.

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* glib/Value.cs : add a private debugging DllImport for ref_counts
	since the glue is there already.  g_value_get_object returns an
	unowned ref, so don't pretend like we own it. Make get_Val work for
	GObject subclasses. [Fixes #71125]

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeView.cs : always use CreateNativeObject.

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide 3 IM related internal types. [Fixes #71021]

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* generator/*.cs : refactoring of Parameters class. Added IEnumerable
	to Parameters and gracefully handle elem == null instead of special
	casing parms == null all over the place. Parameter logic is now Count
	driven. [Fixes #71750]

2005-01-26  Dan Winship  <danw@novell.com>

	* generator/Property.cs (Generate): Remove a redundant WriteLine (that
	resulted in there being 2 blank lines before every property).

	* generator/Signal.cs (Generate): s/Write/WriteLine/ to fix a
	weirdly-formatted if statement in the generated code.

2005-01-25  John Luke  <john.luke@gmail.com>

	* sample/CustomNotebook.cs:
	* sample/CustomWidget.cs: use Widget.WidgetFlags prop to avoid