@@ -401,5 +401,69 @@ This method is called by the generated classes by the Gtk# framework.
         </remarks>
       </Docs>
     </Member>
+    <Member MemberName="AddNotification">
+      <MemberSignature Language="C#" Value="public void AddNotification (string property, GLib.NotifyHandler handler);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="property" Type="System.String" />
+        <Parameter Name="handler" Type="GLib.NotifyHandler" />
+      </Parameters>
+      <Docs>
+        <summary>Request property-change notifications</summary>
+        <param name="property">the property to watch (the underlying GObject property name, not the managed wrapper property)</param>
+        <param name="handler">a <see cref="T:GLib.NotifyHandler" /> to invoke when <paramref name="property" /> changes</param>
+        <remarks>This connects to the GObject "notify" signal with a detail argument of <paramref name="property" />, to receive notifications when that property changes.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="AddNotification">
+      <MemberSignature Language="C#" Value="public void AddNotification (GLib.NotifyHandler handler);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="handler" Type="GLib.NotifyHandler" />
+      </Parameters>
+      <Docs>
+        <summary>Request property-change notifications for all GObject properties</summary>
+        <param name="handler">a <see cref="T:GLib.NotifyHandler" /> to invoke when a GObject property changes</param>
+        <remarks>This connects to the GObject "notify" signal with no detail argument, to receive notifications when any property changes.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="RemoveNotification">
+      <MemberSignature Language="C#" Value="public void RemoveNotification (string property, GLib.NotifyHandler handler);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="property" Type="System.String" />
+        <Parameter Name="handler" Type="GLib.NotifyHandler" />
+      </Parameters>
+      <Docs>
+        <summary>Cancels property-change notifictions for the indicated property</summary>
+        <param name="property">the property</param>
+        <param name="handler">the <see cref="T:GLib.NotifyHandler" /></param>
+        <remarks>This disconnects from notifications for <paramref name="property" />.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="RemoveNotification">
+      <MemberSignature Language="C#" Value="public void RemoveNotification (GLib.NotifyHandler handler);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="handler" Type="GLib.NotifyHandler" />
+      </Parameters>
+      <Docs>
+        <summary>Cancels property-change notifications</summary>
+        <param name="handler">the <see cref="T:GLib.NotifyHandler" /></param>
+        <remarks>This disconnects from generic property change notifications. (This only affects notifications created with the corresponding generic version of <see cref="M:GLib.Object.AddNotification" />. It does not remove notifications for specific properties.)</remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
