@@ -1,3 +1,9 @@
+2005-01-28  Dan Winship  <danw@novell.com>
+
+	* en/GLib/NotifyArgs.xml:
+	* en/GLib/NotifyHandler.xml: 
+	* en/GLib/Object.xml (AddNotification, RemoveNotification): document
+
 2005-01-18  Dan Winship  <danw@novell.com>
 
 	* en/GLib/Marshaller.xml (StringFormat): document
